# kintai

./: .env  .gitignore  Cargo.toml  Procfile  memo.txt  package.json
front/: package.json
migrations/2021-07-11-025751_create_user/: up.sql
migrations/2021-07-12-075537_add_schedule/: down.sql  up.sql
public/: index.html
src/: Empolyee.tsx  Login.tsx  Schedule.tsx  User.tsx  Utils.ts  index.tsx  lib.rs  main.rs  models.rs  schema.rs
