[package]
name = "kintai"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
actix-web = "3"
bcrypt = "0.10"
actix-files = "0.5.0"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.59"
derive_more = { version = "0.99.0", default-features = false, features = ["from", "add", "iterator"] }
qstring = "0.7.2"
passwords = "3.1.7"
actix-rt = "2.2.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
